# datamining-t1

./: .gitignore  README.md  cspell.json  pyproject.toml
src/: solution.ipynb
