[project]
name = "DataMining-T1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Renan Passos", email = "renanvmsp@gmail.com"},
]
dependencies = ["ipykernel>=6.29.5", "matplotlib>=3.10.3", "pandas>=2.2.3", "seaborn>=0.13.2"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
